--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
         "name": "Adham Bishr"
     },
     "scripts": {
-        "start": "babel-node ./server/server.js"
+        "start": "babel-node ./server/server.js",
+        "webpack": "webpack --config=webpack.config.js"
     },
     "dependencies": {
-        "babel-cli": "^6.24.1"
+        "babel-cli": "^6.24.1",
+        "babel-loader": "^7.1.4",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     },
     "devDependencies": {
         "babel-preset-es2015": "^6.24.1",
